# br.com.onggabriel.backend.www

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  STARTPROJECT.md  check_code.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml  issue-template-for-bug.md  issue-template-for-feature.md  issue-template-for-task.md
.github/workflows/: django_ci.yml
app/: __init__.py  celery.py  middleware.py  settings.py  urls.py
authentication/: custom_jwt_cookie_auth.py  permissions.py  urls.py  views.py
blog/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0002_post_slug_alter_post_unique_together.py  0002_remove_post_tags.py  0003_alter_post_tags.py
customuser/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
customuser/migrations/: 0001_initial.py
events/: admin.py  filters.py  models.py  serializer.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_events_image.py  0002_events_is_participation.py  0003_events_link_alter_events_address.py  0004_events_event_end_time.py
management/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
management/migrations/: 0001_initial.py  0002_alter_agendasection_options_and_more.py  0003_alter_agendasection_options_and_more.py
src/app/: settings.py  urls.py  wsgi.py
src/authentication/: admin.py  apps.py  custom_jwt_cookie_auth.py  (+6 more)
testimonial/: admin.py  models.py  serializer.py  urls.py  views.py
(+68 files in other folders)
